fix: fix preview text overflow
close #274

--- a/src/component/ZiltagPreview/index.css
+++ b/src/component/ZiltagPreview/index.css
@@ -14,4 +14,5 @@
 
 .ziltag-ziltag-preview__content {
   color: rgb(51, 51, 51);
+  word-break: break-all;
 }
